# sentiment-analysis-amazon-appliance-reviews

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: old_phase1_lexicon_comparison.ipynb  phase1_lexicon_comparison.ipynb  phase2_compare_lexicons.ipynb  phase2_compare_models.ipynb  phase2_ml_sentiment.ipynb  phase2_prepare.ipynb  phase2_train_default_models.ipynb  phase2_train_gradient_boosting.ipynb  phase2_train_mlp.ipynb  phase2_workflow_index.ipynb
outputs/metrics/: dataset_profile.json  phase1_sentiwordnet_metrics.json  phase1_textblob_metrics.json  phase1_vader_metrics.json  phase2_comparison_subset_metadata.json  phase2_complementnb_comparison_metrics.json  phase2_complementnb_metrics.json  phase2_gradientboosting_comparison_metrics.json  phase2_gradientboosting_metrics.json  phase2_linearsvc_comparison_metrics.json  phase2_linearsvc_metrics.json  (+17 more)
phase_one/: main.ipynb  main.py  main_enhance.ipynb
reports/: experiment_notes.md  final_report.md  section15_rating_enhancement.md  section16_llm_summarization.md  section17_llm_response.md
src/: __init__.py  compare_lexicons.py  compare_models.py  config.py  data_prep.py  data_utils.py  evaluate.py  features.py  hf_utils.py  lexicon_baselines.py  llm_review_response.py  llm_summarize_reviews.py  model_registry.py  phase1_exploration.py  prepare_phase2.py  rating_enhancement.py  test_lexicons.py  train_ml.py  tune_complement_nb.py  tune_gradient_boosting.py  tune_logistic_regression.py  tune_mlp.py  tune_multinomial_nb.py  tune_svm.py  tune_utils.py  utils.py
tests/: test_data_pipeline.py
(+58 files in other folders)
