[project]
name = "sentiment-analysis-amazon-appliance-reviews"
version = "0.1.0"
description = "Two-phase sentiment analysis experiment on Amazon appliance reviews"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.0",
    "nltk>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pytest>=8.4.0",
    "scikit-learn>=1.6.0",
    "sentencepiece>=0.2.0",
    "seaborn>=0.13.0",
    "torch>=2.7.0",
    "textblob>=0.19.0",
    "transformers>=4.53.0",
    "vadersentiment>=3.3.2",
]
